# covid-stats

./: .dockerignore  Dockerfile  README.md  covid_stats.env  database-compose.yml  docker-compose.env  docker-compose.yml  mypy.ini  plots-compose.yml  pyproject.toml  start.sh
covid_stats/: main.py
covid_stats/core/: __init__.py  exporter.py  scraper.py
grafana/provisioning/dashboards/: covid.json  first_dashborad.json  second_dashboard.json
grafana/provisioning/datasources/: datasource.yml
prometheus/: prometheus.yml
tests/: test_simple.py
