[tool.poetry]
name = "covid-stats"
description = "COVID-19 statistics"
version = "1.0.0"
authors = ["angelo"]

[tool.poetry.dependencies]
environs = "~8.0.0"
influxdb = "~5.3.0"
prometheus_client = "~0.8.0"
python = "^3.8"
requests = "~2.24.0"
schedule = "0.6.0"
tenacity = "~6.2.0"


[tool.poetry.dev-dependencies]
black = "19.10b0"
isort = "~4.3.21"
mypy = "0.770"
pytest = "~5.4.3"
pytest-cov = "~2.10.0"


[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
(
    \.idea |
    \.DS_Store |
    \.githooks |
    \.vscode |
    venv |
    .html |
    .json |
    .pyc |
    .sql
)
'''